adds github footer link plus experimental styling

--- a/static/submitUrl.html
+++ b/static/submitUrl.html
@@ -15,19 +15,40 @@
     <title>SHORTPANTS</title>
   </head>
   <body>
+<div class="dots-container-container">
+    <div class="dots-container">
+      <div class=stripes></div>
+      <div class="dots"></div>
+    </div>
+</div>
     <div class="container">
-      <h1>SHORTPANTS</h1>
-      <form class="urlSubmitForm">
-        <label for="url">Submit a link to shorten!</label>
-        <input
-          class="urlInput"
-          type="text"
-          name="url"
-          placeholder="Enter a URL"
-          required
-        />
-        <button type="submit">shorten</button>
-      </form>
+      <div class="content">
+        <h1>SHORTPANTS</h1>
+        <form class="urlSubmitForm">
+          <label for="url">Submit a link to shorten!</label>
+          <input
+            class="urlInput"
+            type="text"
+            name="url"
+            placeholder="Enter a URL"
+            required
+          />
+          <button type="submit">MAKE IT SHORT</button>
+        </form>
+      </div>
+      <footer>
+        <a
+          href="https://github.com/zacharyarney/shortpants"
+          class="github-link"
+        >
+          <img
+            src="/img/GitHub-Mark-32px.png"
+            alt="GitHub logo"
+            class="github-logo"
+          />
+          <p class="github-text">GitHub</p>
+        </a>
+      </footer>
     </div>
   </body>
 </html>
