--- a/static/submitUrl.html
+++ b/static/submitUrl.html
@@ -15,12 +15,12 @@
     <title>SHORTPANTS</title>
   </head>
   <body>
-    <!-- <div class="dots-container-container">
+    <div class="dots-container-container">
       <div class="dots-container">
         <div class="stripes"></div>
         <div class="dots"></div>
       </div>
-    </div> -->
+    </div>
     <div class="container">
       <div class="content">
         <h1>SHORTPANTS</h1>
