--- a/static/submitUrl.html
+++ b/static/submitUrl.html
@@ -10,6 +10,7 @@
       charset="UTF-8"
     />
     <link rel="stylesheet" href="https://use.typekit.net/qpd3zcs.css" />
+    <link href="/favicon.png" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="https://use.typekit.net/qpd3zcs.css" />
     <script src="/js/index.js" async defer></script>
     <title>SHORTPANTS</title>
